# PatentsExtractor

./: .gitignore  README.md  pyproject.toml
ai_collaboration/: 01_project_init.md  02_web_patent_extraction_task.md  03_patent_localization_agent.md  03_patent_localization_agent_fastmcp.md  04_patent_web_localization_analysis.md  05_pdf_normalization_project_init.md  06_improved_pdf_extraction_plan.md  07_pdf_extraction_quality_analysis.md  08_pdf_tools_comprehensive_evaluation.md
docs/: MarkerReadMe.md  patent_localization_usage.md
scripts/: 01_marker_poc.py  02_advanced_marker_processor.py  demo_patent_localization.py  example_usage.py  patent_localization_cli.py  test_models.py  test_patent_localization.py  test_qwen_model_names.py  test_qwen_models.py
src/patents_extractor/: __init__.py  cli.py
src/patents_extractor/agents/: __init__.py  ocr_node.py  output_agent.py  output_node.py  patent_localization_agent.py  qa_agent.py  qa_node.py  structured_agent.py  structured_node.py
src/patents_extractor/core/: __init__.py  extractor.py  localization_agent.py  workflow.py
src/patents_extractor/models/: __init__.py  config.py  patent.py  state.py
src/patents_extractor/templates/: default_json.json  default_markdown.md
src/patents_extractor/utils/: __init__.py  file_utils.py  pdf_utils.py  web_utils.py
test_output/CN116555216A/: patent.md  progress.md
tests/: conftest.py  test_patent_localization_agent.py  test_patent_localization_integration.py  test_structured_agent.py  test_workflow.py
