[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patents-extractor"
version = "0.1.0"
description = "一个将专利 PDF 文件高效解析为包含文本、图表、表格等内容的结构化、便于大语言模型处理的工具。"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "jieke wu", email = "jieke.jack.wu@gmail.com"},
]
keywords = ["patent", "extraction", "ai", "agent", "multimodal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
    
dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "torchaudio",
    "marker-pdf>=1.9.0",
    "ocrmypdf>=16.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
ocr = [
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
]
web = [
    "streamlit>=1.28.0",
    "gradio>=4.0.0",
]
# 新增专利本地化专用依赖组
localization = [
    "markitdown[all]>=0.1.0",
    "playwright>=1.40.0",
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
    "lxml>=4.9.0",
    "urllib3>=2.0.0",
]

[project.scripts]
patents-extractor = "patents_extractor.cli:main"

[project.urls]
Homepage = "https://github.com/a-green-hand-jack/PatentsExtractor"
Repository = "https://github.com/a-green-hand-jack/PatentsExtractor"
Issues = "https://github.com/a-green-hand-jack/PatentsExtractor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/patents_extractor"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["patents_extractor"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/patents_extractor",
    "--cov-report=html",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
